--- a/odc-server/package.json
+++ b/odc-server/package.json
@@ -10,5 +10,8 @@
   "dependencies": {
     "apollo-server-micro": "^2.8.1",
     "graphql": "^14.4.2"
+  },
+  "scripts": {
+    "start": "micro"
   }
 }
