--- a/odc-app/package.json
+++ b/odc-app/package.json
@@ -1,8 +1,11 @@
 {
   "dependencies": {
-    "apollo-client": "^2.6.3",
-    "jest": "^24.8.0",
-    "parcel": "^1.12.3",
+    "@apollo/react-hooks": "^3.0.0",
+    "apollo-client": "^2.6.4",
+    "apollo-utilities": "^1.3.2",
+    "graphql": "^14.4.2",
+    "isomorphic-fetch": "^2.2.1",
+    "parcel-bundler": "^1.12.3",
     "react": "^16.9.0",
     "react-dom": "^16.9.0"
   },
@@ -13,5 +16,10 @@
   "repository": "https://github.com/Linschlager/opendata-client",
   "author": "Linus Vettiger",
   "license": "MIT",
-  "private": true
+  "private": true,
+  "scripts": {
+    "dev": "parcel watch index.html",
+    "start": "parcel index.html",
+    "serve": "parcel serve index.html"
+  }
 }
