--- a/odc-server/package.json
+++ b/odc-server/package.json
@@ -8,10 +8,12 @@
   "license": "MIT",
   "private": true,
   "dependencies": {
-    "apollo-server-micro": "^2.8.1",
-    "graphql": "^14.4.2"
+    "apollo-boost": "^0.4.4",
+    "apollo-server": "^2.8.1",
+    "graphql": "^14.4.2",
+    "graphql-tag": "^2.10.1"
   },
   "scripts": {
-    "start": "micro"
+    "start": "node index.js"
   }
 }
