--- a/odc-app/package.json
+++ b/odc-app/package.json
@@ -8,8 +8,7 @@
     "isomorphic-fetch": "^2.2.1",
     "parcel-bundler": "^1.12.3",
     "react": "^16.9.0",
-    "react-dom": "^16.9.0",
-    "throttle-debounce": "^2.1.0"
+    "react-dom": "^16.9.0"
   },
   "name": "odc-app",
   "version": "1.0.0",
